...
            "state" : "translated",
            "value" : "联盟计划"
          }
        }
      }
    },
    "AI Enhancement" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "KI-Verbesserung"
          }
...
            "state" : "translated",
            "value" : "助手回复未存储：%@"
          }
        }
      }
    },
    "Audio" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Audio"
...
            "state" : "translated",
            "value" : "稍后设置 AI 润色？"
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Einstellungen"
          }
...
            "state" : "translated",
            "value" : "语音活动检测（VAD）"
          }
        }
      }
    },
    "VoiceInk" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "VoiceInk"
          }
...
